--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,12 @@
 *{
   box-sizing: border-box;
+  font-family: 'Minecrafter', sans-serif;
+  font-weight: 100;
 }
-
+@font-face {
+  font-family: 'Minecrafter';
+  src: url('./fonts/Minecrafter.Alt.ttf') format('truetype');
+}
 html, body, #root{
   width: 100%;
   height: 100%;
